<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_proj_python</name>
  <version>0.0.0</version>
  <description>Python bindings for rmf_proj</description>
  <maintainer email="xiyu@openrobotics.org">Xi Yu Oh</maintainer>
  <license>Apache License 2.0</license>

  <depend>pybind11_vendor</depend>
  <depend>rclpy</depend>
  <depend>rmf_proj</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
